--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "type": "git",
     "url": "https://github.com/schmupu/ioBroker.ruleset"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
     "mocha": "^4.1.0",
