--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "type": "git",
     "url": "https://github.com/schmupu/ioBroker.ruleset"
   },
-  "dependencies": {},
+  "dependencies": {
+    "node-schedule": "1.3.0",
+    "request": "^2.85.0",
+    "suncalc": "^1.8.0"
+  },
   "devDependencies": {
     "gulp": "^3.9.1",
     "mocha": "^4.1.0",
