--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "iobroker.ruleset",
+  "name": "iobroker.devicectrl",
   "version": "0.1.1",
-  "description": "Ruleset",
+  "description": "Device Controler",
   "author": {
     "name": "Thorsten Stueben",
     "email": "thorsten@stueben.de"
@@ -12,15 +12,15 @@
       "email": "thorsten@stueben.de"
     }
   ],
-  "homepage": "https://github.com/schmupu/ioBroker.ruleset",
+  "homepage": "https://github.com/schmupu/ioBroker.devicectrl",
   "license": "MIT",
   "keywords": [
-    "ruleset",
+    "devicectrl",
     "logic"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/schmupu/ioBroker.ruleset"
+    "url": "https://github.com/schmupu/ioBroker.devicectrl"
   },
   "dependencies": {
     "node-schedule": "1.3.0",
@@ -32,12 +32,12 @@
     "mocha": "^4.1.0",
     "chai": "^4.1.2"
   },
-  "main": "ruleset.js",
+  "main": "devicectrl.js",
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha --exit"
   },
   "bugs": {
-    "url": "https://github.com/schmupu/ioBroker.ruleset/issues"
+    "url": "https://github.com/schmupu/ioBroker.devicectrl/issues"
   },
   "readmeFilename": "README.md"
 }
