--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "url": "https://github.com/schmupu/ioBroker.devicectrl"
   },
   "dependencies": {
+    "@iobroker/adapter-core": "^1.0.1",
     "node-schedule": "1.3.0",
     "request": "^2.85.0",
-    "suncalc": "^1.8.0",
-    "@iobroker/adapter-core": "^1.0.1"
+    "semver": "^5.6.0",
+    "suncalc": "^1.8.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "mocha": "^4.1.0",
     "chai": "^4.1.2"
+  },
+  "engines": {
+    "node": ">=8.0.0"
   },
   "main": "devicectrl.js",
   "scripts": {
