--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "mocha": "^4.1.0",
-    "chai": "^4.1.2"
+    "chai": "^4.1.2",
+    "eslint": "^5.12.1"
   },
   "main": "devicectrl.js",
   "scripts": {
