--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,23 @@
 os:
-  - windows
   - linux
   - osx
+  - windows
+sudo: required
 language: node_js
 node_js:
-  - '8'
   - '10'
   - '12'
   - '14'
   - '16'
+before_install:
+  - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export CC=clang++; export CXX=clang++; export CXXFLAGS=-stdlib=libc++; fi'
+  - 'if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CXX=g++-6; fi'
 before_script:
   - export NPMVERSION=$(echo "$($(which npm) -v)"|cut -c1)
   - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm@5; fi'
   - npm -v
 env:
-  - CXX=g++-6
+  - DEBUG=true
 addons:
   apt:
     sources:
