--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
     "url": "https://github.com/schmupu/ioBroker.devicectrl"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^1.0.3",
-    "node-schedule": "1.3.0",
-    "request": "^2.85.0",
-    "semver": "^5.6.0",
+    "@iobroker/adapter-core": "^2.4.0",
+    "node-schedule": "^2.0.0",
+    "request": "^2.88.2",
+    "semver": "^7.3.5",
     "suncalc": "^1.8.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "mocha": "^4.1.0",
-    "chai": "^4.1.2",
-    "eslint": "^5.12.1",
-    "eslint-plugin-react": "^7.12.4",
-    "@iobroker/testing": "^1.1.10"
+    "@iobroker/testing": "^2.4.4",
+    "@alcalzone/release-script": "^1.10.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
+    "gulp": "^4.0.2",
+    "mocha": "^8.4.0"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -45,7 +46,8 @@
     "test": "npm run test:package && npm run test:unit",
     "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit",
-    "test:integration": "mocha test/integration --exit"
+    "test:integration": "mocha test/integration --exit",
+    "release": "release-script"
   },
   "bugs": {
     "url": "https://github.com/schmupu/ioBroker.devicectrl/issues"
